--- a/webdesign.css
+++ b/webdesign.css
@@ -17,10 +17,18 @@ h2{
 	font-family: sans-serif;
 }
 
+
+
+main{
+	max-width: 800px;
+	margin: 0 auto;
+	padding: 20px;
+
+}
 .navigation-item{
 	list-style: none;
 	font-size: 20px;
-	margin: 0 10px;
+	margin: 0 20px;
 	padding: 0;
 	display: flex;
 	flex-direction: row;
@@ -36,17 +44,15 @@ h2{
 
 a{
 	color: teal;
-
 }
 
 a:hover{
 color: lightseagreen;
-
 }
+
 .header{
 	color: white;
 	text-decoration: none;
-	
 }
 
 a.header:hover{
